--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -5,7 +5,7 @@ jobs:
     dump_contexts_to_log:
         runs-on: ubuntu-latest
         steps:
-            - name: Dump Github context
-                env:
-                    GITHUB_CONTEXT: ${{toJson(github)}}
-                run: echo '$GITHUB_CONTEXT'
+            - name: Dump GitHub contexts to log
+              env:
+                  GITHUB_CONTEXTS: ${{ toJson(github) }}
+              run: echo "$GITHUB_CONTEXTS"
