--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -1,8 +1,9 @@
 name: Artifacts
 
-on: push
-  branches:
-    - master
+on:
+  push:
+    branches:
+      - "master"
 
 env:
   ARTIFACT_NAME: myartifact
