--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -15,7 +15,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
       - name: Upload artifact
-        uses: action/upload-artifact@v2
+        uses: action/upload-artifacts@v2
         with: 
           name: ${{ env.ARTIFACT_NAME }}
           path: .
