--- a/.github/workflows/cicid.yaml
+++ b/.github/workflows/cicid.yaml
@@ -4,3 +4,11 @@ on:
   push:
     branches:
       - "master"
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout and test
+      uses: actions/checkout@v2
+      - run: python hello.py
