--- a/.github/workflows/cicid.yaml
+++ b/.github/workflows/cicid.yaml
@@ -12,3 +12,13 @@ jobs:
       - name: Checkout and test
         uses: actions/checkout@v2
       - run: python hello.py
+  deploy:
+    needs: [test]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy tested code
+        uses: actions/checkout@v2
+        uses: actions/upload-artifact@v2
+      with:
+        name: hello
+        path: .
