--- a/.github/workflows/cicid.yaml
+++ b/.github/workflows/cicid.yaml
@@ -17,8 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy tested code
-        uses: actions/checkout@v2
-        uses: actions/upload-artifact@v2
-      with:
-        name: hello
-        path: .
+      - uses: actions/checkout@v2
+      - uses: actions/upload-artifact@v2
+        with:
+          name: hello
+          path: .
