--- a/.github/workflows/cicid.yaml
+++ b/.github/workflows/cicid.yaml
@@ -19,6 +19,7 @@ jobs:
       - name: Deploy tested code
       - uses: actions/checkout@v2
       - uses: actions/upload-artifact@v2
-        with:
-          name: hello
-          path: .
+      - run: echo "running test deployment"
+      - with:
+        name: hello
+        path: .
