--- a/.github/workflows/cicid.yaml
+++ b/.github/workflows/cicid.yaml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy tested code
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       - uses: actions/upload-artifact@v2
       - run: echo "running test deployment"
       - with:
